--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "private": false,
   "scripts": {
     "postinstall": "npm run build",
-    "build": "webpack --config webpack.config.js -p",
-    "build:dev": "babel server --out-dir dist --watch",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "webpack --config webpack.config.js -p",
+    "build:server": "babel server --out-dir dist",
     "start": "node dist/index.js",
     "start:dev": "nodemon dist/index.js",
     "webpack:dev": "webpack-dev-server --config webpack.config.js --mode development",
