add test script

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "all": "npm-run-all --parallel build:server start:dev lint:watch webpack:dev",
     "lint": "node_modules/.bin/esw web/src",
     "lint:watch": "sane \"node_modules/.bin/esw web/src\" \"web/src\"",
+    "test": "npm run test:client && npm run test:server",
     "test:client": "jest --updateSnapshot",
     "test:server": "nyc  --reporter=html --reporter=text mocha --exit -r @babel/register ./test/server/**/*.js",
     "test:dev": "nodemon --exec \"yarn test:server\" ./test/server"
